caso3/metabase/02-metabase.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    run: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      run: metabase
  template:
    metadata:
      generateName: metabase
      labels:
        run: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase
          imagePullPolicy: Always
          ports:
            - name: metabase
              containerPort: 3000
      volumes:
        - name: metabase-secret
          secret:
            secretName: metabase-secret
