caso3/metabase/infra.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: metabase-ingress
  namespace: ruggeriml-dev
spec:
  rules:
  - host: ruggeriml-metabase.my.kube
    http:
      paths:
      - backend:
          service:
            name: metabase-service
            port:
              number: 3000
        path: /
        pathType: Prefix

#.um.edu.ar
---

apiVersion: v1
kind: Service
metadata:
  namespace: ruggeriml-dev
  name: metabase-service
  labels:
    run: metabase-service
spec:
  ports:
  - port: 3000
    name: metabase    
    targetPort: 3000
  selector:
    run: metabase


---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ruggeriml-dev
  name: metabase
  labels:
    run: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      run: metabase
  template:
    metadata:
      generateName: metabase
      labels:
        run: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase
          ports:
            - name: metabase
              containerPort: 3000
      volumes:
        - name: metabase-secret
          secret:
            secretName: metabase-secret
